snapshots/syntax/library/functions/string/trim/trim_do_until.snap
---
source: src/syntax/library/functions/string/trim.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: Whitespace
      text: "            "
    - kind: DoStatement
      children:
        - kind: DoKeyword
          text: Do
        - kind: Whitespace
          text: " "
        - kind: UntilKeyword
          text: Until
        - kind: Whitespace
          text: " "
        - kind: BinaryExpression
          children:
            - kind: CallExpression
              children:
                - kind: Identifier
                  text: Trim
                - kind: LeftParenthesis
                  text: (
                - kind: ArgumentList
                  children:
                    - kind: Argument
                      children:
                        - kind: IdentifierExpression
                          children:
                            - kind: InputKeyword
                              text: input
                - kind: RightParenthesis
                  text: )
            - kind: Whitespace
              text: " "
            - kind: InequalityOperator
              text: "<>"
            - kind: Whitespace
              text: " "
            - kind: StringLiteralExpression
              children:
                - kind: StringLiteral
                  text: "\"\""
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: InputStatement
              children:
                - kind: Whitespace
                  text: "                "
                - kind: InputKeyword
                  text: input
                - kind: Whitespace
                  text: " "
                - kind: EqualityOperator
                  text: "="
                - kind: Whitespace
                  text: " "
                - kind: Identifier
                  text: InputBox
                - kind: LeftParenthesis
                  text: (
                - kind: StringLiteral
                  text: "\"Enter text\""
                - kind: RightParenthesis
                  text: )
                - kind: Newline
                  text: "\n"
            - kind: Whitespace
              text: "            "
        - kind: LoopKeyword
          text: Loop
        - kind: Newline
          text: "\n"
    - kind: Whitespace
      text: "        "
