snapshots/syntax/library/functions/string/trim/trim_function_argument.snap
---
source: vb6parse/src/syntax/library/functions/string/trim.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: Whitespace
      text: "            "
    - kind: CallStatement
      children:
        - kind: CallKeyword
          text: Call
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: ProcessText
        - kind: LeftParenthesis
          text: (
        - kind: ArgumentList
          children:
            - kind: Argument
              children:
                - kind: CallExpression
                  children:
                    - kind: Identifier
                      text: Trim
                    - kind: LeftParenthesis
                      text: (
                    - kind: ArgumentList
                      children:
                        - kind: Argument
                          children:
                            - kind: IdentifierExpression
                              children:
                                - kind: InputKeyword
                                  text: input
                    - kind: RightParenthesis
                      text: )
        - kind: RightParenthesis
          text: )
        - kind: Newline
          text: "\n"
    - kind: Whitespace
      text: "        "
